--- a/vue-app/src/style.css
+++ b/vue-app/src/style.css
@@ -1,19 +1,63 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "tailwindcss";
 
-.hero-header {
+
+/*.hero-header {
     background-image: url('https://images.pexels.com/photos/772686/pexels-photo-772686.jpeg');
     background-size: cover;
     background-position: center;
+}*/
+
+body {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
+
+h1, h2, h3, h4 {
+  font-family: 'Cinzel Decorative';
+}
+
+/*h5 {
+  font-family: "Cinzel Decorative";
+}*/
+
+/*.hero-header {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.4);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(-100%); 
+  opacity: 0;
+  transition: transform 1s cubic-bezier(0.25, 1, 0.5, 1), opacity 1s ease;
+}*/
 
 .galerie img {
   transition: transform 0.3s ease-in-out;
+  
+
 }
 
 .btn-jade {
   background-color: #00A86B; 
   color: white; 
-  padding: 10px 20px; 
+  padding: 5px 20px; 
   border: none; 
   border-radius: 5px; 
   font-size: 16px; 
