--- a/vue-app/src/style.css
+++ b/vue-app/src/style.css
@@ -18,6 +18,13 @@ h1, h2, h3, h4 {
   font-family: 'Cinzel Decorative';
 }
 
+
+ .active-nav {
+    color: rgb(35, 149, 255) !important;  
+    text-decoration: underline;
+    font:700;
+}
+
 .galerie img {
   transition: transform 0.3s ease-in-out; 
 }
